[package]
name = "rustasim"
version = "0.1.0"
authors = ["Olivia Brode-Roger <nibr@mit.edu>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/nibrivia/rustasim"

[dependencies]
crossbeam-queue = { git = "https://github.com/nibrivia/crossbeam.git" , branch = "wait" }
#crossbeam-queue = { path = "/home/nibr/crossbeam/crossbeam-queue" }
crossbeam-deque = "0.7"
rand = "0.7.3"
#chrono = "0.4"
num_cpus = "1.13.0"

#slog-async = "2.5.0"
#slog-json = "2.3.0"

[dependencies.slog]
version = "2.5.2"
features = ["max_level_trace", "release_max_level_error"]

[profile.release]
debug = true
