[package]
name = "rustasim"
description = "Distributed event-driven simulator with a focus on datacenter networks"
version = "0.0.99"
authors = ["Olivia Brode-Roger <nibr@mit.edu>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/nibrivia/rustasim"

[dependencies]
crossbeam-queue = { git = "https://github.com/nibrivia/crossbeam.git" , branch = "wait" }
crossbeam-utils = "0.7"
csv = "1.1"
atomic-counter = "1.0.1"
parking_lot = "0.11.0"
rand = "0.7.3"
rand_distr = "0.2.2"
num = "0.3"
num_cpus = "1.13.0"

[dependencies.slog]
version = "2.5.2"
features = ["max_level_trace", "release_max_level_error"]

[profile.release]
debug = true
