[package]
name = "rustasim-dcsim"
version = "0.1.0"
authors = ["Olivia Brode-Roger <nibr@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustasim = { path = "../rustasim-engine" }
num_cpus = "1.13.0"
csv = "1.1"
rand = "0.7.3"
docopt = "1.1"
serde = { version = "1", features = ["derive"] }
